kube_brief6/voteapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voteapp
  labels:
    app: voteapplb
spec:
  selector:
    matchLabels:
      app: voteapplb
  replicas: 1
  template:
    metadata:
      labels:
        app: voteapplb
    spec:
      containers:
      - name: voteapp
        image: whujin11e/public:azure_voting_app
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: loadvoteapp
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: voteapplb
