kube_brief6/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressvote
  annotations:
    - kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clustvoteapp
            port:
              number: 80
